# kd39

./: .clangd  .gitignore  CMakeLists.txt  CMakePresets.json  vcpkg.json
api/: CMakeLists.txt
api/proto/common/: context.proto
api/proto/config/: config_service.proto
api/proto/game/: game_service.proto
api/proto/user/: user_service.proto
bench/: CMakeLists.txt  gateway_http_ws_bench.cpp
cmake/: CompilerOptions.cmake  Dependencies.cmake  FetchEtcdCppApiv3.cmake  ProtoGen.cmake
common/: CMakeLists.txt
common/config/: app_config.cpp
common/context/: context_store.cpp  request_context.cpp
common/error/: error_code.cpp
common/include/common/config/: app_config.h
common/include/common/context/: context_store.h  request_context.h
common/include/common/error/: error_code.h
common/include/common/log/: logger.h
common/log/: logger.cpp
config/: access_gateway.yaml  config_service.yaml  game_service.yaml  user_service.yaml
deploy/docker/: .env  Dockerfile.service  docker-compose.yml
deploy/docker/init/mysql/: init.sql
deploy/helm/: Chart.yaml  values.yaml
deploy/helm/templates/: _helpers.tpl  configmap.yaml  deployment.yaml  service.yaml
deploy/k8s/: access_gateway.yaml  config_service.yaml  configmap.yaml  game_service.yaml  namespace.yaml  secret.yaml  user_service.yaml
docs/: README.md  agent-quickstart.md  build-with-vcpkg.md  gateway-async-roadmap.md  gateway-benchmark.md  project-overview.md
docs/services/: access-gateway-architecture.md  access-gateway-single-port-design.md  config-service-architecture.md  game-service-architecture.md  user-service-architecture.md
framework/: CMakeLists.txt
framework/app/: application.cpp
framework/governance/: CMakeLists.txt  circuit_breaker.cpp  rate_limiter.cpp  retry_policy.cpp  traffic_router.cpp
framework/governance/include/framework/governance/: circuit_breaker.h  rate_limiter.h  retry_policy.h  traffic_router.h
framework/include/framework/app/: application.h
framework/include/framework/rpc/: client_interceptor.h  server_interceptor.h
framework/rpc/: client_interceptor.cpp  server_interceptor.cpp
gateways/: CMakeLists.txt
gateways/access_gateway/: CMakeLists.txt  main.cpp
gateways/access_gateway/auth/: auth_middleware.cpp
gateways/access_gateway/context/: gateway_context.cpp
gateways/access_gateway/http/: http_server.cpp
gateways/access_gateway/include/access_gateway/auth/: auth_middleware.h
gateways/access_gateway/include/access_gateway/context/: gateway_context.h
gateways/access_gateway/include/access_gateway/http/: http_server.h
gateways/access_gateway/include/access_gateway/routing/: grpc_router.h
gateways/access_gateway/include/access_gateway/ws/: ws_server.h
gateways/access_gateway/routing/: grpc_router.cpp
gateways/access_gateway/ws/: ws_server.cpp
infrastructure/: CMakeLists.txt
infrastructure/coordination/: CMakeLists.txt
infrastructure/coordination/election/: leader_election.cpp
infrastructure/coordination/impl/etcd/: CMakeLists.txt  etcd_config_provider.cpp  etcd_election.cpp  etcd_lock.cpp  etcd_registry.cpp
infrastructure/coordination/impl/etcd/include/infrastructure/coordination/impl/etcd/: etcd_registry.h  etcd_state.h  factory.h
infrastructure/coordination/include/infrastructure/coordination/: config_watcher.h  distributed_lock.h  leader_election.h  service_registry.h
infrastructure/coordination/lock/: distributed_lock.cpp
infrastructure/coordination/registry/: service_registry.cpp
infrastructure/coordination/watch/: config_watcher.cpp
infrastructure/mq/: CMakeLists.txt
infrastructure/mq/core/: consumer.cpp  local_bus.h  producer.cpp
infrastructure/mq/include/infrastructure/mq/: consumer.h  producer.h
infrastructure/observability/: CMakeLists.txt  metrics.cpp  telemetry.cpp
infrastructure/observability/include/infrastructure/observability/: metrics.h  telemetry.h
infrastructure/storage/: CMakeLists.txt
infrastructure/storage/include/infrastructure/storage/mysql/: connection_pool.h
infrastructure/storage/include/infrastructure/storage/redis/: redis_client.h
infrastructure/storage/mysql/: mysql_connection_pool.cpp
infrastructure/storage/redis/: redis_client.cpp
scripts/: build-windows.bat
scripts/bench/: run_http_ws_bench.sh  run_ws_stability_bench.sh
services/: CMakeLists.txt
services/config_service/: CMakeLists.txt  config_service_impl.cpp  config_service_impl.h  main.cpp
services/game_service/: CMakeLists.txt  game_service_impl.cpp  game_service_impl.h  main.cpp
services/user_service/: CMakeLists.txt  main.cpp  user_service_impl.cpp  user_service_impl.h
tests/: CMakeLists.txt
tests/common/: error_code_test.cpp  request_context_test.cpp
tests/integration/: config_service_test.cpp  gateway_async_test.cpp  gateway_test.cpp  mq_test.cpp  user_service_test.cpp
tools/: CMakeLists.txt
tools/grpc_cli/: CMakeLists.txt  main.cpp
